--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-4" id="answers">
+            <div class="col-4 my-3" id="answers">
             </div>
         </div>
     </div>
